--- a/xzm.html
+++ b/xzm.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>考试</title>
 	<link rel="stylesheet" type="text/css" href="mmzy.css">
-	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.js"></script>
 	<script type="text/javascript" src="index.js"></script>
 </head>
 <body>
